# seizcord

./: README.md  __init__.py  pyproject.toml  seizcord.py  test.py
